# SceneLib2

./: CMakeLists.txt  monoslam_library.cpp
include/: MonoSLAMApplication.h  OPENCV_LICENCE  cv_mat.h
scenelib2/: camera.cpp  feature.cpp  feature.h  monoslam.cpp  monoslam.h
scenelib2/improc/: improc.cpp  improc.h  search_multiple_overlapping_ellipses.h
scenelib2/support/: pangolin_util.cpp  pangolin_util.h
